<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="376dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298">

        <RadioButton
            android:id="@+id/loseThingsRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loseThings"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rememberNamesRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rememberNames"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/learnThingsRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learnThings"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/keepTrackRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keepTrack"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="124dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/transparent" />

    <Button
        android:id="@+id/buttonSelectedChallenges"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nextButton"
        android:onClick="showToast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>